# DCM-tests

./: .gitignore  pyproject.toml
src/quadratic_solver/: __init__.py  quadratic_solver.py
tests/: test_1.py  test_quadratic_solver.py
